# silero_vad

./: .gitignore  CMakeLists.txt
fc_base-Clang/gflags-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
fc_base-Clang/gflags-subbuild/gflags-populate-prefix/src/gflags-populate-stamp/: download-gflags-populate.cmake  (+2 more)
fc_base-Clang/gflags-subbuild/gflags-populate-prefix/tmp/: gflags-populate-mkdirs.cmake
fc_base-Clang/glog-build/: config.h
fc_base-Clang/glog-build/glog/: logging.h
fc_base-Clang/glog-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
fc_base-Clang/glog-subbuild/glog-populate-prefix/tmp/: glog-populate-mkdirs.cmake
fc_base-Clang/onnxruntime-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
fc_base-Clang/onnxruntime-subbuild/onnxruntime-populate-prefix/tmp/: onnxruntime-populate-mkdirs.cmake
fc_base-Clang/rnnoise-src/.github/workflows/: githubci.yml
fc_base-Clang/rnnoise-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
fc_base-Clang/rnnoise-subbuild/rnnoise-populate-prefix/tmp/: rnnoise-populate-mkdirs.cmake
fc_base-Clang/samplerate-build/: config.h
fc_base-Clang/samplerate-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
fc_base-Clang/samplerate-subbuild/samplerate-populate-prefix/tmp/: samplerate-populate-mkdirs.cmake
front_vad/: CMakeLists.txt  denoiser.cc  denoiser.h  resampler.cc  sample_queue.cc
vad/: CMakeLists.txt  vad_model.h
(+12 files in other folders)
